$Id: ChangeLog,v 1.324 2006/04/07 13:59:54 haraldkipp Exp $

2006-04-07  Harald Kipp  <harald.kipp@egnite.de>

	* configure.ac, os/version.c: Pre-release 4.1.5.4.

	* arch/arm/dev/ih_at91fiq.c: Fast interrupts are now enabled 
	correctly. Mode set/get ioctl added and priority set/get removed. 
	Interrupt entry will no longer push R8-R12 on stack.

	* arch/arm/at91.h: Fast interrupt doesn't require to store R8-R12.

	* dev/twbbif.c: Data had not been forced to high before switching
	to output as claimed in the last change log. Now it is. Added
	additional delays in TwAck.

	* arch/avr/dev/hd44780.c, include/dev/hd44780.h: Target specific 
	delay defaults moved from global header to AVR specific file.

	* include/cfg/lcd.h: Added for platform independent LCD 
	configurations.

	* arch/arm/dev/hd44780_at91.c, conf/arch/arm.nut: ARM driver for 
	HD44780 LCD controller added.

	* conf/dev/dev.nut: Removed requirement for non-volatile hardware
	solves link problem if no such hardware is available.

	* dev/at49bv.c, conf/dev/dev.nut, dev/nvmem.c, include/dev/at49bv.h: 
	AT49BV flash memory support added. A single sector may be used to 
	store system configurations in case there is no EEPROM available.

	* include/cfg/arch/armpio.h, include/cfg/arch/gpio.h:
	Added port configuration header file for ARM.

	* conf/dev/dev.nut, dev/pcf8563.c, include/dev/pcf8563.h: 
	PCF8563 RTC driver added.

	* conf/dev/dev.nut: Added description of SD Card Pins. Added
	settings for MMC card change detect and write protect.

	* include/dev/blockdev.h: Added ioctl(NUTBLKDEV_MEDIAAVAIL).

	* arch/arm/dev/ih_at91irq0.c: Fixed wrong setting of high level
	sense.

	* arch/arm/dev/ih_at91irq1.c, arch/arm/dev/ih_at91irq1.c: 
	Added missing IRQ sense settings.

	* dev/sbimmc.c: Port configuration is now honored.

	* nut/dev/mmcard.c: Number of read retries increased. Memory
	hole fixed. Added ioctl(NUTBLKDEV_MEDIAAVAIL). Card change
	ioctl() will also return 1 if no card is available.
