@@ -1,5 +1,12 @@
-$Id: ChangeLog,v 1.324 2006/04/07 13:59:54 haraldkipp Exp $
+$Id: ChangeLog,v 1.325 2006/05/05 15:43:07 freckle Exp $
 
+2006-04-28  Matthias Ringwald  <mringwal@inf.ethz.ch>
+	* crt/vsscanf.c, crt/vsscanf_P.c: Made _sgetb aware of string delimiter.
+	This fixes bug #1477658
+    
+	* crt/getf.c: Take care of first character after whitespace.
+	This fixes bug #1477676
+    
 2006-04-07  Harald Kipp  <harald.kipp@egnite.de>
 
 	* configure.ac, os/version.c: Pre-release 4.1.5.4.
